# gitrw

./: .gitignore  Cargo.toml  README.md
crates/gitrwlib/: Cargo.toml
crates/gitrwlib/src/: commits.rs  compression.rs  pack_diff.rs  packreader.rs
crates/gitrwlib/src/objs/: commit.rs  tag.rs  tree.rs
crates/gitrwlib/src/shared/: mod.rs
src/: commit_walker.rs  commits.rs  compression.rs  contributors.rs  ffi.rs  ffi_cs.rs  hash_content.rs  idx_reader.rs  lib.rs  main.rs  object_hash.rs  pack_diff.rs  packreader.rs  prune.rs  refs.rs  remove.rs  repository.rs
src/gitrwlib/: commit_walker.rs  hash_content.rs  idx_reader.rs  mod.rs  pack_diff.rs  packreader.rs  refs.rs  repository.rs
src/gitrwlib/objs/: commit.rs  git_objects.rs  mod.rs  tag.rs
src/objs/: commit.rs  git_objects.rs  mod.rs  object_hash.rs  tag.rs  tree.rs
src/shared/: mod.rs  object_hash.rs
