[package]
name = "gitrw"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
flate2 = { version = "1.0.17", features = ["zlib-ng"], default-features = false }
memmap2 = "0.5.5"
bstr = "0.2.17"
bitintr = "0.3.0"
rustc-hash = "1.1.0"
mimalloc = { version = "0.1.34", default-features = false }
clap = { version = "4.1.8", features = ["derive"] }
