[package]
name = "gitrw"
version = "0.1.0"
edition = "2021"

[profile.release]
#debug = true
strip="debuginfo"
lto = true
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
memmap2 = "0.5.10"
bstr = "1.3.0"
rustc-hash = "1.1.0"
mimalloc = { version = "0.1.34", default-features = false }
clap = { version = "4.1.8", features = ["derive"] }
libdeflater = { version = "0.12.0", features = ["use_rust_alloc"] }
