[package]
name = "gitrwlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
memmap2 = "0.5.10"
bstr = "1.3.0"
rustc-hash = "1.1.0"
libdeflater = { version = "0.12.0", features = ["use_rust_alloc"] }
flate2 = { version = "1.0.25", default-features = false, features = ["default"] }
rs_sha1 = "0.1.3"
rayon = "1.7.0"
once_cell = "1.18.0"
memchr = "2.7.1"
